--- a/gb/18/5/15/n10396904.md
+++ b/gb/18/5/15/n10396904.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qblrme335/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qblrme335/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qblrme335/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qblrme335/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>周晓辉：中南海忧心的五大问题能否解决？</h2>
 
 <h6></h6>
@@ -9,7 +9,7 @@
 <p>2017年11月11日，中共现任中纪委书记赵乐际在官媒《人民日报》上发表长文，称：“中国要出问题，还是出在共产党内部”，如果“管党不力”、“治党不严”，中共“就不可避免被历史淘汰”。</p>
 <p>显然，不管中共媒体怎样不顾事实，宣传中共治下的中国如何强大，人民如何感到幸福，以此欺骗老百姓，而了解中国社会真实情况的中共高层，已然切实地感受到了危机的迫近，感受到了自身正坐在火山上，随时被喷发的岩浆所吞噬。当前哪些问题是中共高层们最为关注的呢？</p>
 <p>近日，美国《纽约时报》发表了题为《习近平论国家安全：让他“夜不能寐”的五大问题》的文章，内称，今年4月，北京当局出版了一本习近平论述中共“国家安全”的新书，其中包括此前未经公布的诸多言论，与在大多数中共的宣传中能找到的材料相比，这本书让人更清楚地看到习近平行事是出于怎样的考虑。书中透露了五个让习近平夜不能寐的五大问题。</p>
-<p>这五大问题包括：军事劣势和科技劣势，<ahref="https://github.com/qblrme335/djy/blob/master/gb/tag/%E4%BA%92%E8%81%94%E7%BD%91.md#1">互联网</a>对中共的威胁，潜藏的<ahref="https://github.com/qblrme335/djy/blob/master/gb/tag/%E9%87%91%E8%9E%8D%E9%A3%8E%E9%99%A9.md#1">金融风险</a>以及<ahref="https://github.com/qblrme335/djy/blob/master/gb/tag/%E7%8E%AF%E5%A2%83%E6%B1%A1%E6%9F%93.md#1">环境污染</a>引发的社会抗争。对于这五大问题，中南海可以在短期或者长期内解决吗？</p>
+<p>这五大问题包括：军事劣势和科技劣势，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BA%92%E8%81%94%E7%BD%91.md#1">互联网</a>对中共的威胁，潜藏的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%87%91%E8%9E%8D%E9%A3%8E%E9%99%A9.md#1">金融风险</a>以及<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%8E%AF%E5%A2%83%E6%B1%A1%E6%9F%93.md#1">环境污染</a>引发的社会抗争。对于这五大问题，中南海可以在短期或者长期内解决吗？</p>
 <p>就军事劣势问题，该书援引了习近平在2014年的一次讲话，其称“美国加快发展全球快速打击手段，一些先进武器装备从技术上突破了时空界限，一旦实战部署，将从根本上改变传统的战争攻防格局”，借此，习近平意图警告军方，在技术上落后于美国是非常危险的。而这样的认知，也是习近平大力推动军改、加大军费投入的主因之一，但显然，追赶上美军绝非朝夕之事。</p>
 <p>中美军力差距究竟有多大？多次语不惊人死不休的中共将军张召忠好歹说了大实话，他在一次节目中提到：“美国军力原地不动，我们20年也追不上。”那么如果美国军力发展，中国要花多少年能追上？</p>
 <p>此外，还有分析指出，决定一个国家在一场全面战争中的综合战斗能力的因素，有四项能力，即国家综合科技水平、工业水平以及综合国力；武器装备；军人素质，包括战斗经验、文化水平、科学知识、军事训练水平等；军队以及全民的战斗意志。从目前来看，中国没有一项可以超过美国的，而且相当多方面差距不是一般的大。</p>
@@ -20,49 +20,43 @@
 <p>事实上，阻碍这方面提升的最大阻力恰恰是中共的统治。因为在中共钳制自由下培养出来的人才绝大多数创造力不够，加之整个社会向钱看，人心浮躁，有心做出点成绩的技术人员为了生计，很难静下心来做研究。另有很多不满国内环境的优秀人才弃国而去。是以，中共在整体军事、技术层面上能有多大提升，并不乐观。</p>
 <p>与军事劣势和科技劣势密切相关的是中共对网络的封锁，在防控民众从外部世界获取真实资讯、质疑中共恶政的同时，中共也限制了自己科技人员对世界前沿科技发展的了解和把握。但令中共头疼的是，随着越来越多民众“翻墙”以及微信等社交软件的流行，中共的铁幕正在被打开，了解真相的民众也越来越多。中共在封网方面已是黔驴技穷。</p>
 <p>而因中共不计后果的发展模式，业已给中国人带来了阴霾、土地污染及水源污染等严重环境问题，民众对此的抗议也是逐年增多。对于这样的群体事件，中共早已是疲于奔命，而每一次的镇压引来的是更多中国人的觉醒。</p>
-<p>至于中国乱象丛生的金融市场，习近平同样是非常担心，他在2016年12月的讲话中提到：<ahref="https://github.com/qblrme335/djy/blob/master/gb/tag/%E9%87%91%E8%9E%8D%E9%A3%8E%E9%99%A9.md#1">金融风险</a>有的是长期潜伏的病灶，隐藏得很深，但<strong>可能爆发在一瞬之间</strong>。美国次贷危机爆发就是一夜之间的事情。如果我们将来要出大问题，很可能就会在这个领域出问题，这一点要高度警惕。”众所周知，中共超发货币早已是不争的事实，而且其并无太多良策解决这个问题，只能不断将危机转嫁到老百姓身上。笔者认为，不遵循市场规律的中共，总有一天会收到一个深刻的教训。</p>
-<p>一路解读这五大让习近平忧心的五方面问题，我们不难得出这样的结论：中共的军事劣势和科技劣势短时间内难以改变；<ahref="https://github.com/qblrme335/djy/blob/master/gb/tag/%E4%BA%92%E8%81%94%E7%BD%91.md#1">互联网</a>、尤其是真实资讯的广为传播，对中共的威胁正在越来越多；而层出不穷的因<ahref="https://github.com/qblrme335/djy/blob/master/gb/tag/%E7%8E%AF%E5%A2%83%E6%B1%A1%E6%9F%93.md#1">环境污染</a>引发的社会抗争以及潜藏的金融风险都极有可能成为中共倒台的直接导火索。应该说，中共的亡党危机绝不是几个高层说说而已，而是已迫在眼前。</p>
+<p>至于中国乱象丛生的金融市场，习近平同样是非常担心，他在2016年12月的讲话中提到：<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%87%91%E8%9E%8D%E9%A3%8E%E9%99%A9.md#1">金融风险</a>有的是长期潜伏的病灶，隐藏得很深，但<strong>可能爆发在一瞬之间</strong>。美国次贷危机爆发就是一夜之间的事情。如果我们将来要出大问题，很可能就会在这个领域出问题，这一点要高度警惕。”众所周知，中共超发货币早已是不争的事实，而且其并无太多良策解决这个问题，只能不断将危机转嫁到老百姓身上。笔者认为，不遵循市场规律的中共，总有一天会收到一个深刻的教训。</p>
+<p>一路解读这五大让习近平忧心的五方面问题，我们不难得出这样的结论：中共的军事劣势和科技劣势短时间内难以改变；<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BA%92%E8%81%94%E7%BD%91.md#1">互联网</a>、尤其是真实资讯的广为传播，对中共的威胁正在越来越多；而层出不穷的因<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%8E%AF%E5%A2%83%E6%B1%A1%E6%9F%93.md#1">环境污染</a>引发的社会抗争以及潜藏的金融风险都极有可能成为中共倒台的直接导火索。应该说，中共的亡党危机绝不是几个高层说说而已，而是已迫在眼前。</p>
 <p>责任编辑：莆山</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/17/3/17/n8936896.md#1">律师分析周强践踏法律背后的中共亡党危机</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/17/6/7/n9237285.md#1">高智晟2016中国人权报告十四：环境污染</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/17/11/30/n9908905.md#1">横河：鲁炜落马中国互联网会更自由吗？</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/18/1/14/n10057724.md#1">银监会声明坐实中共恐惧难解的金融风险</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/3/17/n8936896.md#1">律师分析周强践踏法律背后的中共亡党危机</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/6/7/n9237285.md#1">高智晟2016中国人权报告十四：环境污染</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/11/30/n9908905.md#1">横河：鲁炜落马中国互联网会更自由吗？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/1/14/n10057724.md#1">银监会声明坐实中共恐惧难解的金融风险</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/12/n11108237.md#1" target="_blank">张林：疯狂中共两次差点让中国人被灭绝</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/30/n9092520.md#1" target="_blank">法轮大法洪传新西兰 20年点滴回顾</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/6/n9929355.md#1" target="_blank">尹曙生：触目惊心的杀人运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/28/n11751194.md#1" target="_blank">【2019盘点】响彻世界政坛的正义之声</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/16/n12815794.md#1">【未解之谜】缅甸奇僧亲历 揭密生死轮回</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/13/n12809133.md#1">东方的辛德勒—约翰?拉贝</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/14/n12810364.md#1">西方轮回研究漫笔：转世前的安排和约定</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/20/4/3/n11999735.md#1">华盛顿将军系列故事：打马少年 入画江山? ?</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/18/n12820656.md#1">【未解之谜】临死体验后发生的奇迹</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12828962.md#1">【横河直播】反亚裔仇恨集会 谁在打种族牌</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12827737.md#1">【新闻大家谈】中共国师挖坑 拜登叫习勿信宣传</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12826726.md#1">【拍案惊奇】北京画外交红线 川普建社媒平台</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12825808.md#1">蓬佩奥谈杨洁篪发飙：我会这样击其痛点</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12824695.md#1">美议员促扩大制裁 阻中芯国际购DUV光刻机</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12826026.md#1">整治冥纸冥币  中共“新破四旧”运动遭轰</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12827069.md#1">从不抽烟 台前主播萧彤雯罹肺腺癌零期</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12826073.md#1">感佩台湾垃圾分类 杜汶泽：爱一地犹如爱一人</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12825025.md#1">《餐车》回到原点 黄秋生因KID一句话走心</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12823452.md#1">《查克史奈德之正义联盟》影评：DC的史诗巨作！</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12827709.md#1">罗时丰大港开唱：纵使过气，也不要丧气</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12824338.md#1">鲑鱼5大营养补脑、护心血管 3类人不宜多吃</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12824292.md#1">【重播】变种病毒感染比例大增 第四波疫情恐将至？</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12825217.md#1">西澳70头虎鲸围攻16米长蓝鲸 搏斗4小时</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12827458.md#1">心情高低起伏 男子遗失百万美元彩券后寻回</a></li>
-<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12826876.md#1">iPhone手机在湖底泡水半年 竟然还能用</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qblrme335/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qblrme335/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/5/15/n10396904.htm">周晓辉：中南海忧心的五大问题能否解决？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/5/15/n10396904.htm">周晓辉：中南海忧心的五大问题能否解决？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qblrme335/djy/blob/master/gb/18/5/15/n10396904.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qblrme335/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qblrme335/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qblrme335/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/18/5/15/n10396904.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
